--- a/style.css
+++ b/style.css
@@ -1,16 +1,35 @@
+h2{
+    text-align: center;
+    background-color: rgb(156, 226, 250);
+    font-weight: bold;
+    color: white;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
 .nav-header{
     padding: 0;
+    
 }
 .nav-toggle{
     display: none;
+    color:rgb(156, 226, 250) ;
+    text-align: right;
+}
+.fa-solid{
+font-size: 20px;
+background: transparent;
+
 }
 .links{
     height: auto;
     display: flex;
+    font-size: 20px;
+    list-style: none;
 }
 .links a{
+    
     padding: 0;
-    margin: 0 0.5rem;
+    margin: 20px;
+    text-decoration: none;
 }
 .links a:hover{
     padding: 0;
@@ -18,14 +37,21 @@
 }
 .social-icons{
     display: flex;
+    list-style: none;
+    margin-top: 40px;
+    margin-left: 500px;
+}
+.fa-brands{
+    margin: 10px;
+    color: rgb(156, 226, 250);
+    font-size: 25px;
+
 }
 /* by default hide links */
-.links{
-    /* height: 0;
-    overflow: hidden;
-    transition: var(__transition);*/
-}
+
+
 /* toggle class */
+
 .show-links{
     height:10rem;
 }
@@ -39,3 +65,4 @@
         padding: 1rem;
     }
 }
+ 
